# dioxus-i18n

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test_runs.yml
examples/: config-auto-locales.rs  config-dynamic-pathbuf.rs  config-static-includestr.rs  dioxus-desktop.rs  fluent-grammar.rs  freya.rs
examples/data/fluent/: en.ftl
src/: error.rs  i18n_macro.rs  lib.rs  test_hook.rs  use_i18n.rs
tests/: README.md  defects_spec.rs  graceful_fallback_spec.rs  translations_spec.rs
tests/common/: mod.rs  test_hook.rs
tests/data/i18n/: en.ftl
