[package]
name = "dioxus-i18n"
version = "0.4.0"
edition = "2021"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
description = "i18n integration for Dioxus apps based on Fluent Project."
license = "MIT"
repository = "https://github.com/dioxus-community/dioxus-i18n"
readme = "./README.md"
categories = ["accessibility", "gui", "localization", "internationalization"]

[dependencies]
dioxus-lib = { version = "0.6", default-features = false, features = [
    "hooks",
    "macro",
    "signals",
] }
fluent = "0.16.1"
unic-langid = { version = "0.9.5", features = ["macros"] }

[dev-dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
freya = "0.2"
futures = "0.3.31"
pretty_assertions = "1.4.1"
unic-langid = { version = "0.9.5", features = ["macros"] }
